products/stream/4.13/licensing/index.md
# Licensing


Every Cribl Stream download package comes with a Free license that allows for processing of up to 1 TB/day. This license requires sending anonymized [Telemetry Data](#telemetry-data) to Cribl. 

Enterprise, Standard, and Sales Trial licenses are entitled to a defined, per-license daily ingestion quota. These licenses do not require sending telemetry metadata.

> This page applies only to on-prem deployments.
> For basic information about Cribl.Cloud Enterprise and Standard plans, see [Cloud Pricing](deploy-cloud#pricing).
{.box .cloud}

## Manage On-Prem Licenses 

### Check Licenses

To check your license type, restrictions, and/or expiration date:

1. In the sidebar, select **Settings**.
1. On the **Global** tab, select **Licensing** to see these details.

### Add or Renew Licenses

On the Leader (or in a Single-instance deployment), after submitting your newly untarred Cribl Stream software's registration page, you can add and manage licenses at **Settings** > **Global** > **Licensing**. Select **Add License** to paste in a license key provided to you by Cribl.

This applies to Cribl Stream Standard and Enterprise licenses, which must be renewed annually. Free licenses are already onboard the download package, need not be added or managed here, and do not expire.

### Licenses in Airgapped Deployments

If your environment does not allow internet connectivity, you'll need to bypass the registration Web form when you deploy or upgrade Cribl Stream. To do so:

1. On the Leader's (or single instance's) host, navigate to `$CRIBL_HOME/local/cribl`.
1. Create a file named `licenses.yml`.
1. Paste in your license key in this format, then save the result:

    ```yaml
    licenses:
    - <your-license-key-here>
    ```

### Expiration/Renewal Notifications {#notifications}

In Cribl Stream 4.3 and newer, the UI will prompt you to renew your paid license by displaying banner and drawer notifications, starting 30 days before license expiration. When you see these prompts, verify your license's expiration date and contact Cribl Sales at sales@cribl.io to renew.

Beyond these default notifications, you can configure custom [License‑Expiration Notifications](notifications#license). You can send these to PagerDuty, or to other external services via webhook.

## License Quotas

### Track Data Ingestion

To track your data ingestion volume over the last 30 days:

1. In the sidebar, select **Monitoring**.
1. Select **System** and then **Licensing**.
   This shows you the dashboard with your license consumption.
   
For higher-fidelity metrics, you can enable the [Cribl Internal](sources-cribl-internal) Source's CriblMetrics option to forward metrics to your metrics Destination of choice, and run a report on `cribl.total.in_bytes`.

### Exemptions from License Quotas {#exemptions}

The following data is exempt from license quotas:

- Data generated by [Cribl Internal](sources-cribl-internal) Sources normally does
  not count against your ingestion quota.
- Edge Node events that you send to the DevNull Destination or drop in any Pipeline do not count against your ingestion quota.
  This license reduction is calculated based on average event size
  and may not represent the exact number of bytes you drop.

If you are connecting Workers/Edge Nodes in a Cribl Stream Cloud
[hybrid deployment](cloud-enterprise#hybrid), you are granted additional
exemptions to prevent double billing (in Cribl Edge, these exemptions also apply
to customer-managed deployments):

- Data transferred between Cribl Stream Workers via the [Cribl HTTP](sources-cribl-http) and [Cribl TCP](sources-cribl-tcp) Sources does not count against your ingestion quota.
- Data that Cribl Edge sends to Cribl Stream from the [Cribl HTTP](destinations-cribl-http) and [Cribl TCP](destinations-cribl-tcp) Destinations counts against quota only in Cribl Edge.
- Data generated by [Datagens](sources-datagens) does not count against your ingestion quota.

### License Quotas with Compressed S3 Buckets

If you pull data from compressed S3 buckets, the license quota is applied to the uncompressed size of the file objects.

### Enforce License Quotas

If your data throughput exceeds your license quota: 

- Free and Standard licenses enforce data ingestion quotas through limits on the number of Worker Groups/Fleets and Worker/Edge Node Processes.
- Enterprise license keys turn off all enforcement.
- When an Enterprise or Standard license expires, Cribl Stream will attempt to fall back to a trial or free license, or – only if that fails – will block incoming data. For details, see [Combining Licenses](#combining-licenses).

## License Types

Cribl offers several Cribl Stream license types including Enterprise, Standard, and Free. For a current list of available license types and a detailed comparison of what's included in each, see Cribl [Pricing](https://cribl.io/pricing/). 

## Combine Licenses

Multiple licenses can coexist on one instance.
When two or more Standard or Enterprise licenses are present,
the effective ingestion quota for the deployment will be equal to the sum of their individual ingestion quotas.

When multiple *license types* coexist, the effective license is determined by the following priority order:

1. Enterprise or Standard licenses that have not expired.
1. Sales Trial licenses.
1. Free licenses.

### License Expiration {#when-licenses-expire}

When an Enterprise or Standard license expires, you can remove the old license
to fall back to the Sales Trial or Free type. An expired Sales Trial license will fall back to a Free license, but you must remove the Sales Trial license and restart the Leader.

To delete your expired license:

1. In the sidebar, select **Settings**.
1. On the **Global** tab, select **Licensing**.
1. Locate your expired license, and select **Delete license**. 
1. Restart the Leader.

> Upon expiration of a paid license, if there is no fallback license, Cribl Stream
> will backpressure and block all incoming data.
>
{.box .warning}

## Licensing in Distributed Deployments

With licenses that limit the number of Worker Processes/​Edge Nodes, Cribl Stream will attempt to balance or rebalance Worker Processes (threads) as evenly as possible across all licensed Worker Nodes.

You configure licensing only on the Leader Node. (See [Managing Licenses – Adding and Renewing](#managing).) The Leader will push license information down to Worker Groups as part of the heartbeat ([Stream](/stream/deploy-distributed#communication), [Edge](/edge/setting-up-leader-and-edge-nodes)). There is no need to configure or store licenses directly on Worker Nodes.

### Temporary License Restriction on Worker Node Startup

When you first start a Worker Node, it will use the default license.
As a result, you might see a log entry warning about a limit on Worker Processes:

```
{
  "time": "2023-02-10T15:11:48.609Z",
  "cid": "api",
  "channel": "cribl",
  "level": "warn",
  "message": "number of worker processes has been limited by the license",
  "requested": 14,
  "licenseLimit": 10,
  "source": "cribl.log"
}
```

You can ignore this warning message. The license won't limit Worker Processes
once the Leader passes the production license to the Worker.

### Convert an On-Prem License to a Cribl.Cloud Billing Plan

You can convert on-prem Cribl Stream licenses to a Cribl.Cloud billing plan. This
lets you keep your on-prem deployments of Cribl Stream, but manage all of the
environment licenses in one interface.

For more details and setup steps, visit [Connecting On-Prem Leaders to Cribl.Cloud Billing](cloud-connections).

## Telemetry Data {#telemetry-data}

A **Free** license requires sharing of telemetry **metadata** with Cribl. Cribl uses this metadata to help us understand how to improve the product and prioritize new features. 

Telemetry payloads are sent from all Cribl Stream nodes (Leader and Workers), to an endpoint located at `https://cdn.cribl.io/telemetry/`.

### Test the Telemetry Endpoint's Connectivity

To manually test connectivity to the telemetry endpoint, especially if you are needing to configure a proxy, you can use the following command:

```shell
curl https://cdn.cribl.io/telemetry/
```

Expected response:

`cribl /// living the stream!`

If you get a 302 response code, check whether you've omitted the URL's trailing `/`.

### Disable Telemetry

With an Enterprise or Standard license, you have the option to disable telemetry sharing from on-prem Cribl Stream. With a Free license, disabling telemetry will cause Cribl Stream to block inbound traffic within 24 hours.

If you would like an exception to disable telemetry in order to deploy in your environment, please contact Cribl Sales at sales@cribl.io, and we will work with you to issue licenses on a case-by-case basis. 

Once you have received a license that removes the telemetry requirement, you can disable telemetry in Cribl Stream' at **Settings** > **Global** > **System > General Settings > Upgrade & Share Settings** and toggling **Share telemetry with Cribl** off.

### Metadata Shared Through Telemetry

Your Cribl Stream instance shares metadata with Cribl per interval (roughly, every minute).

Details sent for nodes in any mode:

- Version
- OS Distribution/Version
- Kernel Version 
- Instance's GUID
- License ID
- Earliest, Latest Time
- Number of Events In and Out, overall and by Source type and Destination type
- Number of Bytes In and Out, overall and by Source type and Destination type
- Number of Open, Closed, Active Connections
- Number of Routes
- Number of Pipelines
- Runtime Environment Indicators (AWS and Kubernetes)

Additional details sent for Leader nodes (when Cribl isn't sending managed node data):

- Runtime Environment
- OS Distribution / Version
- Version
- Kernel Version

### How We Use Telemetry Data

With telemetry enabled, Cribl software sends usage data directly to Cribl. We securely store and encrypt this data on Cribl-managed servers, with restricted access.

Cribl fully anonymizes and aggregates this usage data in our systems of analysis. There, we use the aggregated metrics to improve Cribl products and services by analyzing circumstances around disruptions, opportunities for ingest efficiencies, and ways to optimize performance. Access is restricted to only those Cribl employees and contractors who require anonymized data to perform their jobs.

Cribl collects License IDs only to ensure that all data is being sent by a Cribl product. These IDs cannot be used to personally identify any user of Cribl software or Cribl.Cloud services.

For further details, see the [Cribl Privacy Policy](https://cribl.io/legal/privacy-policy/).

## Troubleshooting Resources {#troubleshooting}

>[Cribl University](https://cribl.io/university/) offers a Troubleshooting Criblet on [Switching from Free to Enterprise](https://university.cribl.io/#/online-courses/910a52c9-6294-4f4a-b3fb-eff9dcd4e901). To follow the direct course link, first log into your Cribl University account. (To create an account, select the **Sign up** link. You’ll need to click through a short **Terms & Conditions** presentation, with chill music, before proceeding to courses – but Cribl’s training is always free of charge.) Once logged in, check out other useful [Troubleshooting Criblets](https://university.cribl.io/#/curricula/2574ac50-05a3-4b50-8990-fcfa58a2aec0) and [Advanced Troubleshooting](https://university.cribl.io/#/curricula/4d42b5c4-5157-4c49-8322-89d16fad5b73) short courses.
{.box .course}
